<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="120dp"
            android:paddingBottom="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


        <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/ivAvatar"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/grey"/>

        <TextView
                android:id="@+id/txtUsername"
                android:text="@string/txtUsername_txt"
                android:paddingTop="20dp"
                android:paddingBottom="60dp"
                android:textSize="28sp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tvShortestTime"
                        android:text="@string/tvShortTime_num"
                        android:textColor="@color/lightRed"
                        android:textSize="40sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/tvShortestTime_txt"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#A9A9A9"/>

            <LinearLayout
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/tvGamesPlayed"
                        android:text="@string/tvGamesPlayed_num"
                        android:textColor="@color/lightRed"
                        android:textSize="40sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:text="@string/tvGamedPlayed_txt"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

        <View
                android:id="@+id/line"
                android:paddingTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#A9A9A9"/>
    </LinearLayout>
</ScrollView>